--- a/docs/fr/modules/Fonctionnement.tex
+++ b/docs/fr/modules/Fonctionnement.tex
@@ -42,7 +42,7 @@
   \subsection{Présentation générale}\color{white}
   Ici, un module est un regroupement de fichiers source et de fichiers de configurations de la librairie Bash Utils, dont le but est de faciliter le développement d'un script Bash selon une certaine catégorie.\linebreak
 
-  Le gestionnaire de modules est un outil permetttant d'initialiser chaque module et de sourcer (inclure) chaque fichier associé.\linebreak
+  Le gestionnaire de modules est un outil permettant d'initialiser chaque module et de sourcer (inclure) chaque fichier associé.\linebreak
 
   Pour un fonctionnement optimal, il est fortement recommandé de l'installer dans le dossier personnel de tous les utilisateurs d'un ordinateur susceptibles d'utiliser cette librairie.\linebreak
 
@@ -66,7 +66,7 @@
 
   - \textbf{\color{lime}module.conf\color{white} :} Ce fichier, à placer dans le dossier \textbf{\color{lime}.Bash-utils/config/modules/\$nom\_du\_module\color{white}}, contient chaque variable utile au fichier \textbf{\color{lime}Initializer.sh\color{white}}, présenté ci-dessous.\linebreak
 
-  - \textbf{\color{lime}Initializer.sh\color{white} :} Ce fichier initialiise le module et sert de fichier d'inclusion de chaque fichier source dans le dossier \textbf{\color{lime}Bash-utils/lib/\$nom\_du\_module\color{white}}, ainsi qu'aux autres fichiers de configuration à placer, de préférence, dans ce même dossier.\linebreak
+  - \textbf{\color{lime}Initializer.sh\color{white} :} Ce fichier initialise le module et sert de fichier d'inclusion de chaque fichier source dans le dossier \textbf{\color{lime}Bash-utils/lib/\$nom\_du\_module\color{white}}, ainsi qu'aux autres fichiers de configuration à placer, de préférence, dans ce même dossier.\linebreak
 
   Outre les fichiers de configuration et les fichiers source de chaque module, plusieurs fichiers sont présents directement dans le dossier \textbf{\color{lime}.Bash-utils\color{white}} :\linebreak
 
@@ -80,11 +80,14 @@
 
   \color{blue}
   \subsubsection{Présentation}\color{white}
+  Ce module est le module de base de la librairie. Il contient toutes les configurations et les fonctions de base de cette dernière.
 
   \color{blue}
   \subsubsection{Liste des fonctions}\color{white}
+  Vous pouvez retrouver ces fonctions dans les différents documents présents dans le dossier \textbf{\color{lime}Bash-utils/docs/fr/modules/main/functions\color{white}}
 
   \color{blue}
   \subsubsection{Liste des configurations}\color{white}
+  Vous pouvez retrouver ces fonctions dans les différents documents présents dans le dossier \textbf{\color{lime}Bash-utils/docs/fr/modules/main/config\color{white}}
     
 \end{document}
