Saving the LaTeX file

--- a/docs/fr/modules/Fonctionnement.tex
+++ b/docs/fr/modules/Fonctionnement.tex
@@ -59,6 +59,15 @@
   Le dossier \textbf{\color{lime}modules\color{white}} (sous-dossier de \textbf{\color{lime}.Bash-utils\color{white}}) contient en sous-dossier des dossiers de modules contenant les fichiers d'initialisation propres à chaque module.
 
   \color{green}
+
+  \subsection{Architecture}\color{white}
+
+  \color{blue}
+  \subsubsection{Dossiers}\color{white}
+  
+  \color{blue}
+  \subsubsection{Fichiers}\color{white}
+
   \subsection{Fichiers}\color{white}
   Ce gestionnaire est composé d'un fichier à placer dans le dossier personnel de tous les utilisateurs de la librairie :  \textbf{\color{lime}Bash-utils-init.sh\color{white}}.\linebreak
 
