--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -1,14 +1,20 @@
 \documentclass[a4paper,10pt]{article}
 
-\usepackage[utf8]{inputenc}     % Encodage du texte
-\usepackage[french]{babel}      % Langue
+\usepackage[utf8]{inputenc}     % Encodage du texte.
+\usepackage[french]{babel}      % Langue du document.
 \usepackage[sfdefault]{roboto}  % Police d'écriture utilisée dans le document.
-\usepackage[T1]{fontenc}
-\usepackage{color}
-\usepackage{fancyhdr}
+\usepackage[T1]{fontenc}					%
+\usepackage[usenames,dvipsnames]{xcolor}	% Coloration de texte.
+\usepackage{verbatim}						% Mise en page de paragraphes.
+\usepackage{fancyhdr}						%
+\usepackage[document]{ragged2e}								% Justification du texte.
+\usepackage[a4paper,margin=1in,footskip=0.25in]{geometry}	% Mise en page du document.					%
+\usepackage{hyperref}
+
 
 \fontfamily{}
 
+\pagecolor{black}
 \title{Fonctions du fichier de librairie Headers.lib}
 \author{Dimitri OBEID}
 \date{2021}
@@ -23,14 +29,58 @@
   /Keywords ()
 }
 
+\definecolor{mauve}{RGB}{128, 0, 128}
+
 \begin{document}
+ \maketitle
+ \tableofcontents
+ \newpage
 
-\maketitle
+\color{red}
+\section{Présentation}\color{white}
 
-\begin{abstract}
+\color{red}
+\section{Fonctions}\color{white}
 
-\end{abstract}
+\color{green}
+\subsection{Création de base d'un header}\color{white}
 
-\section{}
+\color{mauve}\textbf{DrawLine}\color{white}\linebreak
+\textbf{Description :}\linebreak
+Cette fonction dessine une ligne en remplissant chaque colonne du terminal avec un caractère choisi et passé en second argument.\linebreak
+
+\textbf{Paramètres :}\linebreak
+\color{orange}\textbf{p\_lineColor }\color{white} --> Ce paramètre attend un nombre entier, correspondant à un code couleur.\linebreak
+\color{orange}\textbf{p\_lineChar }\color{white} --> Ce paramètre attend un seul caractère, qui sera affiché sur chaque colonne.\linebreak
+
+\textbf{Fonctionnement :}\linebreak
+La fonction \color{mauve}\textbf{DrawLine }\color{white} vérifie d'abord qu'une valeur soit passée en premier argument (paramètre \color{orange}\textbf{p\_lineColor}\color{white}). Si c'est le cas, la commande \color{gray}\textbf{echo }\color{white} est appelée avec ses options \color{gray}\textbf{-ne }\color{white} pour afficher.\\[1\baselineskip]
+
+\textbf{Utilisation :}\linebreak
+Utilisez cette fonction pour dessiner une ligne devant remplir la totalité des colonnes d'une ligne du terminal.\\[1\baselineskip]
+
+\color{mauve}\textbf{HeaderBase}\color{white}\linebreak
+\textbf{Description :}\linebreak
+Cette fonction affiche un header complet.\\[1\baselineskip]
+
+\textbf{Paramètres :}\linebreak
+\color{orange}\textbf{p\_lineColor }\color{white} --> Premier paramètre servant à définir la couleur souhaitée du caractère lors de l'appel de la fonction \color{mauve}\textbf{DrawLine}\color{white}.\\[1\baselineskip]
+\color{orange}\textbf{p\_lineChar }\color{white} --> Deuxième paramètre servant à définir le caractère souhaité lors de l'appel de la fonction \color{mauve}\textbf{DrawLine}\color{white}.\\[1\baselineskip]
+\color{orange}\textbf{p\_stringColor }\color{white} --> .\\[1\baselineskip]
+\color{orange}\textbf{p\_stringTxt }\color{white} --> .\\[1\baselineskip]
+
+\textbf{Fonctionnement :}\linebreak
+Tout d'abord, la fonction \color{mauve}\textbf{HeaderBase }\color{white} vérifie l'état de la variable de statut \color{orange}\textbf{\_\_BU\_MAIN\_STAT\_ECHO }\color{white}, vérifiant si un texte peut être redirigé vers un fichier de logs sans provoquer de boucles infinies en rappelant certaines fonctions\color{white}.\\[1\baselineskip]
+\color{mauve}\textbf{HeaderBase }\color{white} appelle la fonction \color{mauve}\textbf{DrawLine }\color{white} en y passant en arguments ses deux premiers paramètres.\\[1\baselineskip]
+
+\textbf{Utilisation :}\linebreak
+
+
+\color{green}
+\subsection{Headers unicolores}\color{white}
+Chacune de ces fonctions 
+
+\color{green}
+\subsection{Headers multicolores}\color{white}
 
 \end{document}
