Writing the Headers.tex documentation in the French folder

--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -19,6 +19,7 @@
 \author{Dimitri OBEID}
 \date{2021}
 \pagestyle{fancy}
+\justifying
 
 \pdfinfo{
   /Title    (Fonctions du fichier de librairie Headers.lib)
@@ -39,48 +40,88 @@
 \color{red}
 \section{Présentation}\color{white}
 
+\color{red}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
 \color{red}
 \section{Fonctions}\color{white}
 
 \color{green}
 \subsection{Création de base d'un header}\color{white}
 
-\color{mauve}\textbf{DrawLine}\color{white}\linebreak
+\textbf{Fonction : }\color{mauve}\textbf{DrawLine}\color{white}\\[1\baselineskip]
 \textbf{Description :}\linebreak
 Cette fonction dessine une ligne en remplissant chaque colonne du terminal avec un caractère choisi et passé en second argument.\linebreak
 
 \textbf{Paramètres :}\linebreak
-\color{orange}\textbf{p\_lineColor }\color{white} --> Ce paramètre attend un nombre entier, correspondant à un code couleur.\linebreak
+\color{orange}\textbf{p\_lineColor }\color{white} --> Ce paramètre attend un code couleur *.\linebreak
 \color{orange}\textbf{p\_lineChar }\color{white} --> Ce paramètre attend un seul caractère, qui sera affiché sur chaque colonne.\linebreak
+
+* Chaque code couleur est défini dans le fichier \color{lime}\textbf{Colors.conf}\color{white}.\\[1\baselineskip]
 
 \textbf{Fonctionnement :}\linebreak
 La fonction \color{mauve}\textbf{DrawLine }\color{white} vérifie d'abord qu'une valeur soit passée en premier argument (paramètre \color{orange}\textbf{p\_lineColor}\color{white}). Si c'est le cas, la commande \color{gray}\textbf{echo }\color{white} est appelée avec ses options \color{gray}\textbf{-ne }\color{white} pour afficher.\\[1\baselineskip]
 
 \textbf{Utilisation :}\linebreak
-Utilisez cette fonction pour dessiner une ligne devant remplir la totalité des colonnes d'une ligne du terminal.\\[1\baselineskip]
+Appelez cette fonction pour dessiner une ligne devant remplir la totalité des colonnes d'une ligne du terminal.\\[2\baselineskip]
 
-\color{mauve}\textbf{HeaderBase}\color{white}\linebreak
+
+\par\noindent\rule{\textwidth}{0.4pt}\\[1\baselineskip]
+\textbf{Fonction : }\color{mauve}\textbf{HeaderBase}\color{white}\\[1\baselineskip]
 \textbf{Description :}\linebreak
 Cette fonction affiche un header complet.\\[1\baselineskip]
 
 \textbf{Paramètres :}\linebreak
-\color{orange}\textbf{p\_lineColor }\color{white} --> Premier paramètre servant à définir la couleur souhaitée du caractère lors de l'appel de la fonction \color{mauve}\textbf{DrawLine}\color{white}.\\[1\baselineskip]
-\color{orange}\textbf{p\_lineChar }\color{white} --> Deuxième paramètre servant à définir le caractère souhaité lors de l'appel de la fonction \color{mauve}\textbf{DrawLine}\color{white}.\\[1\baselineskip]
-\color{orange}\textbf{p\_stringColor }\color{white} --> .\\[1\baselineskip]
-\color{orange}\textbf{p\_stringTxt }\color{white} --> .\\[1\baselineskip]
+\color{orange}\textbf{p\_lineColor }\color{white} --> Ce paramètre attend un code couleur.\linebreak
+\color{orange}\textbf{p\_lineChar }\color{white} --> Ce paramètre attend un seul caractère.\linebreak
+\color{orange}\textbf{p\_stringColor }\color{white} --> Ce paramètre attend un code couleur.\linebreak
+\color{orange}\textbf{p\_stringTxt }\color{white} --> Ce paramètre attend une chaîne de caractères.\\[1\baselineskip]
 
 \textbf{Fonctionnement :}\linebreak
 Tout d'abord, la fonction \color{mauve}\textbf{HeaderBase }\color{white} vérifie l'état de la variable de statut \color{orange}\textbf{\_\_BU\_MAIN\_STAT\_ECHO }\color{white}, vérifiant si un texte peut être redirigé vers un fichier de logs sans provoquer de boucles infinies en rappelant certaines fonctions\color{white}.\\[1\baselineskip]
-\color{mauve}\textbf{HeaderBase }\color{white} appelle la fonction \color{mauve}\textbf{DrawLine }\color{white} en y passant en arguments ses deux premiers paramètres.\\[1\baselineskip]
+
+En adaptant la commande d'affichage de texte à appeler, cette fonction appelle la fonction \color{mauve}\textbf{DrawLine }\color{white} en y passant en arguments ses deux premiers paramètres.\\[1\baselineskip]
+
+Une fois ceci fait, un saut de ligne est effectué, et un message est affiché, avec la couleur choisie encodée en premier (troisième paramètre) et le texte passé en quatrième argument.\\[1\baselineskip]
+
+La commande de ré-initialisation de décoration du terminal (définie dans le fichier) est ensuite appelée (elle est définie dans les fichiers \color{lime}\textbf{Colors.conf }\color{white} et \color{lime}\textbf{Text.conf}\color{white}) pour réinitialiser la couleur d'affichage de texte selon la configuration du terminal.\\[1\baselineskip]
 
 \textbf{Utilisation :}\linebreak
+Appelez cette fonction pour afficher un texte en majuscules entre deux lignes, et pour davantage personnaliser cet affichage si vous ne trouvez pas votre compte parmi les fonctions des sections \color{green}\textbf{Headers unicolores }\color{white} et \color{green}\textbf{Headers multicolores}\color{white}.\\[1\baselineskip]
 
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{Headers unicolores}\color{white}
-Chacune de ces fonctions 
+\textbf{Description :}\linebreak
+Chacune des fonctions de cette catégorie appellent la fonction \color{mauve}\textbf{HeaderBase }\color{white}, en lui passant en premier et troisième arguments une même couleur (définie dans le fichier \color{lime}\textbf{Colors.conf}\color{white}), un caractère défini par la variable \color{orange}\textbf{\$\_\_BU\_MAIN\_TXT\_PRINT\_HEADER\_LINE\_CHAR }\color{white} en deuxième argument, puis la chaîne de caractères à afficher en quatrième argument (seul paramètre que prennent ces fonctions).\\[1\baselineskip]
+
+\textbf{Paramètres :}\linebreak
+\color{orange}\textbf{\$1 }\color{white} --> Ce paramètre attend la chaîne de caractère à afficher.
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
-\subsection{Headers multicolores}\color{white}
+\subsection{Headers bicolores}\color{white}
+Pour faciliter davantage la tâche des développeurs, des fonctions de création de headers bicolores existent.
+
+Elles fonctionnent chacune de la même manière que les précédentes, à deux exceptions prêtes :\linebreak
+	- le nom : chaque fonction porte le nom de la couleur à afficher sur chaque ligne, puis le nom de la couleur à appliquer au texte.\linebreak
+	- le nom (bis) : Il n'y a pas de fonctions portant deux fois le nom de la même couleur, car le rendu serait le même que celui des fonctions de la catégorie précédente.\linebreak
+	- 
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+\color{green}
+\subsection{Headers tricolores}\color{white}
+Étant donné la charge de travail nécessaire pour créer ces headers, il serait beaucoup trop fastidieux de créer tous ces headers prédéfinis.\\[1\baselineskip]
+
+Pour vous donner une idée, prenez la formule mathématique suivante :
+
+\[nbcol * (nbcol - 1) * nbcol\]
+
+Où nbcol = nombre de codes couleurs disponibles\linebreak
+
+Au moment où j'ai écrit cette partie de la documentation, il existait 12 codes couleurs disponibles. En effectuant le calcul précédent, nous obtenons \textbf{12 * 11 * 12 = 1 584 combinaisons possibles}, sans parler de l'ajout d'éventuels nouveaux codes couleurs.\\[1\baselineskip]
 
 \end{document}
