--- a/docs/fr/modules/Fonctionnement.tex
+++ b/docs/fr/modules/Fonctionnement.tex
@@ -40,13 +40,13 @@
 
   \color{green}
   \subsection{Présentation générale}\color{white}
-  Ici, un module est un regroupement de fichiers source et de fichiers de configurations de la librairie Bash Utils, dont le but est de faciliter le développement d'un script Bash selon une certaine catégorie.\linebreak
+  Ici, un module est un regroupement de fichiers source et de fichiers de configurations développé pour la librairie Bash Utils, dont le but est de faciliter le développement d'un script Bash selon une certaine catégorie.\linebreak
 
   Le gestionnaire de modules est un outil permettant d'initialiser chaque module et de sourcer (inclure) chaque fichier associé.\linebreak
 
   Pour un fonctionnement optimal, il est fortement recommandé de l'installer dans le dossier personnel de tous les utilisateurs d'un ordinateur susceptibles d'utiliser cette librairie.\linebreak
 
-  En outre, il est obligatoire de l'installer dans le dossier personnel du super-utilisateur (le dossier \textbf{\color{lime}/root\color{white}}), pour pouvoir exécuter un script utilisant la librairie Bash Utils avec les privilèges du super-utilisateur.
+  En outre, il est obligatoire de l'installer dans le dossier personnel du super-utilisateur (le dossier \textbf{\color{lime}/root\color{white}}), pour pouvoir exécuter un script utilisant la librairie Bash Utils avec les privilèges du super-utilisateur, ainsi que pour utiliser certaines fonctionnalités ne pouvant être exécutées qu'avec des privilèges du super-utilisateur.
 
   \color{green}
   \subsection{Dossiers}\color{white}
@@ -75,11 +75,11 @@
 
   - \textbf{\color{lime}module.conf\color{white} :} Ce fichier, à placer dans le dossier \textbf{\color{lime}.Bash-utils/config/modules/\$nom\_du\_module\color{white}}, contient chaque variable utile au fichier \textbf{\color{lime}Initializer.sh\color{white}}, présenté ci-dessous.\linebreak
 
-  - \textbf{\color{lime}Initializer.sh\color{white} :} Ce fichier initialise le module et sert de fichier d'inclusion de chaque fichier source dans le dossier \textbf{\color{lime}Bash-utils/lib/\$nom\_du\_module\color{white}}, ainsi qu'aux autres fichiers de configuration à placer, de préférence, dans ce même dossier.\linebreak
+  - \textbf{\color{lime}Initializer.sh\color{white} :} Ce fichier initialise le module et sert de fichier d'inclusion de chaque fichier source dans le dossier de librairie \textbf{\color{lime}Bash-utils/lib/\$nom\_du\_module\color{white}}, ainsi qu'aux autres fichiers de configuration à placer, de préférence, dans ce même dossier.\linebreak
 
   Outre les fichiers de configuration et les fichiers source de chaque module, plusieurs fichiers sont présents directement dans le dossier \textbf{\color{lime}.Bash-utils\color{white}} :\linebreak
 
-  - \textbf{\color{lime}Bash-utils-root-val.path\color{white} :} Ce fichier contient le chemin du dossier racine de la libraire Bash Utils. Il est lu par le fichier \textbf{\color{lime}module.conf\color{white}}
+  - \textbf{\color{lime}Bash-utils-root-val.path\color{white} :} Ce fichier contient le chemin du dossier racine de la librairie Bash Utils. Il est lu par le fichier \textbf{\color{lime}module.conf\color{white}}, du module \color{lime}\textbf{main\color{white}}.
 
  \color{red}
  \section{Liste des modules officiels}\color{white}
