--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -48,24 +48,24 @@
 \color{green}
 \subsection{Création de base d'un header}\color{white}
 
-\textbf{Fonction : }\color{mauve}\textbf{DrawLine}\color{white}\\[1\baselineskip]
+\textbf{Fonction : \color{mauve}DrawLine\color{white}}\\[1\baselineskip]
 \textbf{Description :}\linebreak
 Cette fonction dessine une ligne en remplissant chaque colonne du terminal avec un caractère choisi et passé en second argument.\linebreak
 
 \textbf{Paramètres :}\linebreak
-\color{orange}\textbf{p\_lineColor }\color{white} --> Ce paramètre attend un code couleur *.\linebreak
-\color{orange}\textbf{p\_lineChar }\color{white} --> Ce paramètre attend un seul caractère, qui sera affiché sur chaque colonne.\linebreak
+\textbf{\color{orange}p\_lineColor\color{white}} --> Ce paramètre attend un code couleur *.\linebreak
+\textbf{\color{orange}p\_lineChar\color{white}} --> Ce paramètre attend un seul caractère, qui sera affiché sur chaque colonne.\linebreak
 
-* Chaque code couleur est défini dans le fichier \color{lime}\textbf{Colors.conf}\color{white}.\\[1\baselineskip]
+* Chaque code couleur est défini dans le fichier \textbf{\color{lime}Colors.conf\color{white}}.\\[1\baselineskip]
 
 \textbf{Fonctionnement :}\linebreak
-La fonction \color{mauve}\textbf{DrawLine }\color{white} vérifie d'abord qu'une valeur soit passée en premier argument (paramètre \color{orange}\textbf{p\_lineColor}\color{white}). Si c'est le cas, la commande \color{gray}\textbf{echo }\color{white} est appelée avec ses options \color{gray}\textbf{-ne }\color{white} pour encoder la couleur de la ligne de caractère à dessiner.\\[1\baselineskip]
+La fonction \textbf{\color{mauve}DrawLine\color{white}} vérifie d'abord qu'une valeur soit passée en premier argument (paramètre \textbf{\color{orange}p\_lineColor\color{white}}). Si c'est le cas, la commande \textbf{\color{gray}echo\color{white}} est appelée avec ses options \textbf{\color{gray}-ne\color{white}} pour encoder la couleur de la ligne de caractère à dessiner.\\[1\baselineskip]
 
-Une fois ceci fait, une boucle \textbf{for} est exécutée. Pour un nombre \textbf{i} allant de 1 au nombre de colonnes présentes dans la fenêtre du terminal obtenu grâce à la commande \color{gray}\textbf{eval echo}\color{white}, on affiche \textbf{i} fois, sans retour à la ligne, le caractère défini par la variable \color{orange}\textbf{\$\_\_BU\_MAIN\_TXT\_COLS }\color{white} dans le fichier de\linebreak
-configurations \color{lime}\textbf{Text.conf}\color{white}.\\[1\baselineskip]
+Une fois ceci fait, une boucle \textbf{for} est exécutée. Pour un nombre \textbf{i} allant de 1 au nombre de colonnes présentes dans la fenêtre du terminal obtenu grâce à la commande \textbf{\color{gray}eval echo\color{white}}, on affiche \textbf{i} fois, sans retour à la ligne, le caractère défini par la variable \textbf{\color{orange}\$\_\_BU\_MAIN\_TXT\_COLS\color{white}} dans le fichier de\linebreak
+configurations \textbf{\color{lime}Text.conf\color{white}}.\\[1\baselineskip]
 
 Enfin, une fois la boucle exécutée, la fonction réencode la couleur d'affichage selon la couleur par\linebreak
-défaut du terminal, si le paramètre \color{orange}\textbf{\$p\_lineColor }\color{white} contient une valeur.\\[1\baselineskip]
+défaut du terminal, si le paramètre \textbf{\color{orange}\$p\_lineColor\color{white}} contient une valeur.\\[1\baselineskip]
 
 \textbf{Utilisation :}\linebreak
 Appelez cette fonction pour dessiner une ligne devant remplir la totalité des colonnes d'une ligne du terminal.\\[2\baselineskip]
@@ -73,31 +73,31 @@ Appelez cette fonction pour dessiner une ligne devant remplir la totalité des c
 
 \par\noindent\rule{\textwidth}{0.4pt}\\[1\baselineskip]
 
-\textbf{Fonction : }\color{mauve}\textbf{HeaderBase}\color{white}\\[1\baselineskip]
+\textbf{Fonction : \color{mauve}HeaderBase\color{white}}\\[1\baselineskip]
 \textbf{Description :}\linebreak
 Cette fonction affiche un header complet.\\[1\baselineskip]
 
 \textbf{Paramètres :}\linebreak
-\color{orange}\textbf{p\_lineColor }\color{white} --> Ce paramètre attend un code couleur.\linebreak
-\color{orange}\textbf{p\_lineChar }\color{white} --> Ce paramètre attend un seul caractère.\linebreak
-\color{orange}\textbf{p\_stringColor }\color{white} --> Ce paramètre attend un code couleur.\linebreak
-\color{orange}\textbf{p\_stringTxt }\color{white} --> Ce paramètre attend une chaîne de caractères.\\[1\baselineskip]
+\textbf{\color{orange}p\_lineColor\color{white}} --> Ce paramètre attend un code couleur.\linebreak
+\textbf{\color{orange}p\_lineChar\color{white}} --> Ce paramètre attend un seul caractère.\linebreak
+\textbf{\color{orange}p\_stringColor\color{white}} --> Ce paramètre attend un code couleur.\linebreak
+\textbf{\color{orange}p\_stringTxt\color{white}} --> Ce paramètre attend une chaîne de caractères.\\[1\baselineskip]
 
 \textbf{Fonctionnement :}\linebreak
-Tout d'abord, la fonction \color{mauve}\textbf{HeaderBase }\color{white} vérifie l'état de la variable de statut \color{orange}\textbf{\$\_\_BU\_MAIN\_STAT\_ECHO}\color{white}, vérifiant si un texte peut être redirigé vers un fichier de logs sans provoquer de boucles infinies en\linebreak
-rappelant certaines fonctions\color{white}.\\[1\baselineskip]
+Tout d'abord, la fonction \textbf{\color{mauve}HeaderBase\color{white}} vérifie l'état de la variable de statut \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_ECHO\color{white}}, vérifiant si un texte peut être redirigé vers un fichier de logs sans provoquer de boucles infinies en\linebreak
+rappelant certaines fonctions.\\[1\baselineskip]
 
-En adaptant la commande d'affichage de texte à appeler, cette fonction appelle la fonction \color{mauve}\textbf{DrawLine }\color{white} en y passant en arguments ses deux premiers paramètres.\\[1\baselineskip]
+En adaptant la commande d'affichage de texte à appeler, cette fonction appelle la fonction \textbf{\color{mauve}DrawLine\color{white}} en y passant en arguments ses deux premiers paramètres.\\[1\baselineskip]
 
 Une fois ceci fait, un saut de ligne est effectué, et un message est affiché, avec la couleur choisie\linebreak
 encodée en premier (troisième paramètre) et le texte passé en quatrième argument.\\[1\baselineskip]
 
-La commande de ré-initialisation de décoration du terminal (définie dans les fichiers \color{lime}\textbf{Colors.conf }\color{white} et \color{lime}\textbf{Text.conf}\color{white}) est ensuite appelée pour réinitialiser la couleur d'affichage de texte selon la configuration du terminal.\\[1\baselineskip]
+La commande de ré-initialisation de décoration du terminal (définie dans les fichiers \textbf{\color{lime}Colors.conf\color{white}} et \textbf{\color{lime}Text.conf\color{white}}) est ensuite appelée pour réinitialiser la couleur d'affichage de texte selon la configuration du terminal.\\[1\baselineskip]
 
 \textbf{Utilisation :}\linebreak
 Appelez cette fonction pour afficher un texte en majuscules entre deux lignes, et pour davantage\linebreak
 personnaliser cet affichage si vous ne trouvez pas votre compte parmi les fonctions proposées dans les sections suivantes :
-\color{green}\textbf{Headers unicolores }\color{white} et \color{green}\textbf{Headers multicolores}\color{white}.\\[1\baselineskip]
+\textbf{\color{green}Headers unicolores\color{white}} et \textbf{\color{green}Headers multicolores\color{white}}.\\[1\baselineskip]
 
 
 \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
@@ -105,15 +105,15 @@ personnaliser cet affichage si vous ne trouvez pas votre compte parmi les foncti
 \color{green}
 \subsection{Headers unicolores}\color{white}
 \textbf{Description :}\linebreak
-Chacune de ces fonctions appelle la fonction \color{mauve}\textbf{HeaderBase}\color{white}, en lui passant ses trois premiers\linebreak
+Chacune de ces fonctions appelle la fonction \textbf{\color{mauve}HeaderBase\color{white}}, en lui passant ses trois premiers\linebreak
 arguments prédéfinis.\\[1\baselineskip]
 
 \textbf{Paramètre :}\linebreak
-\color{orange}\textbf{\$1 }\color{white} --> Ce paramètre attend la chaîne de caractère à afficher.\\[1\baselineskip]
+\textbf{\color{orange}\$1\color{white}} --> Ce paramètre attend la chaîne de caractère à afficher.\\[1\baselineskip]
 
 
 \textbf{Fonctionnement :}\linebreak
-Chacune des fonctions de cette catégorie appelle la fonction \color{mauve}\textbf{HeaderBase}\color{white}, en lui passant en premier et troisième arguments un même code couleur \color{orange}\textbf{\$\_\_BU\_MAIN\_COLOR...}\color{white}, (défini dans le fichier \color{lime}\textbf{Colors.conf}\color{white}), un caractère défini par la variable \color{orange}\textbf{\$\_\_BU\_MAIN\_TXT\_PRINT\_HEADER\_LINE\_CHAR }\color{white} en deuxième\linebreak
+Chacune des fonctions de cette catégorie appelle la fonction \textbf{\color{mauve}HeaderBase\color{white}}, en lui passant en premier et troisième arguments un même code couleur \textbf{\color{orange}\$\_\_BU\_MAIN\_COLOR...\color{white}}, (défini dans le fichier \textbf{\color{lime}Colors.conf\color{white}}), un caractère défini par la variable \textbf{\color{orange}\$\_\_BU\_MAIN\_TXT\_PRINT\_HEADER\_LINE\_CHAR\color{white}} en deuxième\linebreak
 argument, puis la chaîne de caractères à afficher en quatrième argument (seul paramètre que prennent ces fonctions).\\[1\baselineskip]
 
 \textbf{Utilisation :}\linebreak
@@ -147,6 +147,6 @@ Au moment où j'ai écrit cette partie de la documentation (dimanche 29 août 20
 En effectuant le calcul précédent, nous obtenons \textbf{12 * 11 * 12 = 1 584 combinaisons possibles}, sans\linebreak
 parler de l'ajout d'éventuels nouveaux codes couleurs.\\[1\baselineskip]
 
-Il faudra donc se contenter d'appeler la fonction \color{mauve}\textbf{HeaderBase}\color{white}, suivie de ses 4 arguments.
+Il faudra donc se contenter d'appeler la fonction \textbf{\color{mauve}HeaderBase\color{white}}, suivie de ses 4 arguments.
 
 \end{document}
